cambio de subtitulo

--- a/index.html
+++ b/index.html
@@ -93,8 +93,11 @@
     </li>
  </ul>
 
-<h2>Otros:</h2>
- <ul>
+<h2>
+    Otros:
+</h2>
+ 
+<ul>
     <li>
         <a href="index2.html">Listas</a>
     </li>
@@ -102,5 +105,6 @@
         <a href="index3.html">Formulario</a>
     </li>
 </ul>
+
 </body>
 </html>
